--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "crawler-cli"
+path = "src/main.rs"
 
 [dependencies]
 chrono = "0.4"
+clap = { version = "4", features = ["derive"]}
 hex = "0.4"
 futures = "0.3"
 reqwest = "0.11"
@@ -16,4 +20,5 @@ thiserror = "1"
 tokio = { version = "1", features = ["full"]}
 tokio-stream = "0.1"
 tracing = "0.1"
+tracing-subscriber = "0.2"
 url = "2.3"
