--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 [dependencies]
 chrono = "0.4"
 clap = { version = "4", features = ["derive"]}
+env_logger = "0.9"
 hex = "0.4"
 futures = "0.3"
 reqwest = "0.11"
